#4379 Improve Stroom permission model